components/ads_8.1/ace.hpp

//-- type declarations -------------------------------------------------------
typedef char *PAceChar;
typedef char AceChar;
typedef char *PAceBinary;
typedef int __stdcall (*TCallbackFunction)(Word usPercent, int ulCallbackID);
typedef int __stdcall (*TProgressCallback)(Word usPercent);
typedef int __stdcall (*TSQLAbortFunc)(void);
typedef int __stdcall (*TUDFFunc)(void);
typedef char *ADSFIELD;
typedef int ADSHANDLE;
typedef int ADSIndexArray[50];
typedef ADSIndexArray *PADSIndexArray;
typedef int *PADSHANDLE;
typedef double *PDOUBLE;
typedef Word *PWord;
typedef short SIGNED16;
typedef short *PSIGNED16;
typedef Word UNSIGNED16;
typedef Word *PUNSIGNED16;
typedef int SIGNED32;
typedef int *PSIGNED32;
typedef __int64 SIGNED64;
typedef __int64 *PSIGNED64;
typedef unsigned UNSIGNED32;
typedef unsigned *PUNSIGNED32;
typedef Byte SIGNED8;
typedef Byte UNSIGNED8;
typedef char * *pPChar;
struct ADS_MGMT_COMM_STATS
{
	
public:
	double dPercentCheckSums;
	unsigned ulTotalPackets;
	unsigned ulRcvPktOutOfSeq;
	unsigned ulNotLoggedIn;
	unsigned ulRcvReqOutOfSeq;
	unsigned ulCheckSumFailures;
	unsigned ulDisconnectedUsers;
	unsigned ulPartialConnects;
	unsigned ulInvalidPackets;
	unsigned ulRecvFromErrors;
	unsigned ulSendToErrors;
} ;
typedef ADS_MGMT_COMM_STATS *pADS_MGMT_COMM_STATS;
struct ADS_MGMT_CONFIG_PARAMS
{
	
public:
	unsigned ulNumConnections;
	unsigned ulNumWorkAreas;
	unsigned ulNumTables;
	unsigned ulNumIndexes;
	unsigned ulNumLocks;
	unsigned ulUserBufferSize;
	unsigned ulStatDumpInterval;
	unsigned ulErrorLogMax;
	unsigned ulNumTPSHeaderElems;
	unsigned ulNumTPSVisibilityElems;
	unsigned ulNumTPSMemoTransElems;
	Word usNumRcvECBs;
	Word usNumSendECBs;
	Word usNumBurstPackets;
	Word usNumWorkerThreads;
	unsigned ulSortBuffSize;
	char aucErrorLog[256];
	char aucSemaphore[256];
	char aucTransaction[256];
	Byte ucReserved3;
	Byte ucReserved4;
	Word usSendIPPort;
	Word usReceiveIPPort;
	Byte ucUseIPProtocol;
	Byte ucFlushEveryUpdate;
	unsigned ulGhostTimeout;
	unsigned ulFlushFrequency;
	unsigned ulKeepAliveTimeOut;
	Byte ucDisplayNWLoginNames;
	Byte ucUseSemaphoreFiles;
	Byte ucUseDynamicAOFs;
	Byte ucUseInternet;
	Word usInternetPort;
	Word usMaxConnFailures;
	unsigned ulInternetKeepAlive;
	Word usCompressionLevel;
	Word usReserved5;
	unsigned ulReserved6;
} ;
typedef ADS_MGMT_CONFIG_PARAMS *pADS_MGMT_CONFIG_PARAMS;
struct ADS_MGMT_CONFIG_MEMORY
{
	
public:
	unsigned ulTotalConfigMem;
	unsigned ulConnectionMem;
	unsigned ulWorkAreaMem;
	unsigned ulTableMem;
	unsigned ulIndexMem;
	unsigned ulLockMem;
	unsigned ulUserBufferMem;
	unsigned ulTPSHeaderElemMem;
	unsigned ulTPSVisibilityElemMem;
	unsigned ulTPSMemoTransElemMem;
	unsigned ulRcvEcbMem;
	unsigned ulSendEcbMem;
	unsigned ulWorkerThreadMem;
} ;
typedef ADS_MGMT_CONFIG_MEMORY *pADS_MGMT_CONFIG_MEMORY;
struct ADS_MGMT_INSTALL_INFO
{
	
public:
	unsigned ulUserOption;
	char aucRegisteredOwner[36];
	char aucVersionStr[16];
	char aucInstallDate[16];
	char aucOemCharName[16];
	char aucAnsiCharName[16];
	char aucEvalExpireDate[16];
	char aucSerialNumber[16];
} ;
typedef ADS_MGMT_INSTALL_INFO *pADS_MGMT_INSTALL_INFO;
#define ADS_SYSTEM_DICTIONARY_TABLE_NAME "dictionary"
#define ADS_SYSTEM_TABLES_TABLE_NAME "tables"
#define ADS_SYSTEM_COLUMNS_TABLE_NAME "columns"
#define ADS_SYSTEM_USERS_TABLE_NAME "users"
#define ADS_SYSTEM_USER_GROUPS_TABLE_NAME "usergroups"
#define ADS_SYSTEM_USER_GROUP_MEMBERS_TABLE_NAME "usergroupmembers"
#define ADS_SYSTEM_INDEX_FILES_TABLE_NAME "indexfiles"
#define ADS_SYSTEM_INDEXES_TABLE_NAME "indexes"
#define ADS_SYSTEM_PERMISSIONS_TABLE_NAME "permissions"
#define ADS_SYSTEM_RELATIONS_TABLE_NAME "relations"
#define ADS_SYSTEM_VIEWS_TABLE_NAME "views"
#define ADS_SYSTEM_STORED_PROCEDURES_TABLE_NAME "storedprocedures"
#define ADS_SYSTEM_LINKS_TABLE_NAME "links"
#define ADS_SYSTEM_OBJECTS_TABLE_NAME "objects"
#define ADS_SYSTEM_TRIGGERS_TABLE_NAME "triggers"
extern "C" unsigned __stdcall AdsDDRenameObject(int hDictionary, char * pucObjectName, char * pucNewObjectName, Word usObjectType, unsigned ulOptions);
extern "C" unsigned __stdcall AdsGetDouble(int hTable, char * pucFldName, PDOUBLE pdValue);
extern "C" unsigned __stdcall AdsRegisterCallbackFunction(TCallbackFunction Callback, unsigned ulCallbackID);
extern "C" unsigned __stdcall AdsRegisterProgressCallback(TProgressCallback Callback);
extern "C" unsigned __stdcall AdsRegisterSQLAbortFunc(TSQLAbortFunc Callback);
extern "C" unsigned __stdcall AdsRegisterUDF(int hObj, Word usType, TUDFFunc Callback);
extern "C" unsigned __stdcall AdsDDCreateArticle(int hDBConn, char * pucPublicationName, char * pucObjectName, char * pucRowIdentColumns, char * pucFilter, unsigned ulOptions);
extern "C" unsigned __stdcall AdsDDCreateSubscription(int hDBConn, char * pucSubscriptionName, char * pucPublicationName, char * pucTarget, char * pucUser, char * pucPassword, char * pucReplicationQueue, Word usForward, char * pucComments, unsigned ulOptions);