components/ads_8.1/ace.pas


   { Referential Integrity (RI) update and delete rules }
   ADS_DD_RI_CASCADE            = 1;
   ADS_DD_RI_RESTRICT           = 2;
   ADS_DD_RI_SETNULL            = 3;
   ADS_DD_RI_SETDEFAULT         = 4;

   { Default Field Value Options }
   ADS_DD_DFV_UNKNOWN           = 1;
   ADS_DD_DFV_NONE              = 2;
   ADS_DD_DFV_VALUES_STORED     = 3;

   {* Supported permissions in the data dictionary *}
   ADS_PERMISSION_NONE           = $00000000;
   ADS_PERMISSION_READ           = $00000001;
   ADS_PERMISSION_UPDATE         = $00000002;
   ADS_PERMISSION_EXECUTE        = $00000004;
   ADS_PERMISSION_INHERIT        = $00000008;
   ADS_PERMISSION_INSERT         = $00000010;
   ADS_PERMISSION_DELETE         = $00000020;
   ADS_PERMISSION_LINK_ACCESS    = $00000040;
   ADS_PERMISSION_CREATE         = $00000080;
   ADS_PERMISSION_ALTER          = $00000100;
   ADS_PERMISSION_DROP           = $00000200;
   ADS_PERMISSION_WITH_GRANT     = $80000000;
   ADS_PERMISSION_ALL_WITH_GRANT = $8FFFFFFF;
   ADS_PERMISSION_ALL            = $FFFFFFFF;

   {*
    * special code that can be used as the input to specify
    * which special permission to retrieve.
    *}
   ADS_GET_PERMISSIONS_WITH_GRANT         = $8000FFFF;
   ADS_GET_PERMISSIONS_CREATE             = $FFFF0080;
   ADS_GET_PERMISSIONS_CREATE_WITH_GRANT  = $8FFFFF8F;

   {* Link DD options *}
   ADS_LINK_GLOBAL             = $00000001;
   ADS_LINK_AUTH_ACTIVE_USER   = $00000002;
   ADS_LINK_PATH_IS_STATIC     = $00000004;

   {* Trigger event types *}
   ADS_TRIGEVENT_INSERT         = 1;
   ADS_TRIGEVENT_UPDATE         = 2;
   ADS_TRIGEVENT_DELETE         = 3;

   {* Trigger types *}
   ADS_TRIGTYPE_BEFORE         = $00000001;
   ADS_TRIGTYPE_INSTEADOF      = $00000002;
   ADS_TRIGTYPE_AFTER          = $00000004;
   ADS_TRIGTYPE_CONFLICTON     = $00000008;

   {* Trigger container types *}
   ADS_TRIG_WIN32DLL           = 1;
   ADS_TRIG_COM                = 2;
   ADS_TRIG_SCRIPT             = 3;

   {* Trigger options *}
   ADS_TRIGOPTIONS_NO_VALUES            = $00000000;
   ADS_TRIGOPTIONS_WANT_VALUES          = $00000001;
   ADS_TRIGOPTIONS_WANT_MEMOS_AND_BLOBS = $00000002;
   ADS_TRIGOPTIONS_DEFAULT              = $00000003;  {* default is to include vals and memos *}
   ADS_TRIGOPTIONS_NO_TRANSACTION       = $00000004;

   {*
    * Table permission verification levels.
    * Level 1 is all columns searchable, even those without permission.
    * Level 2 is the default. Permission to the column is required to search or filter on the column.
    * Level 3 is the most restrictive. Only static SQL cursors are allowed.
    *}
   ADS_DD_TABLE_PERMISSION_LEVEL_1 = 1;
   ADS_DD_TABLE_PERMISSION_LEVEL_2 = 2;
   ADS_DD_TABLE_PERMISSION_LEVEL_3 = 3;

   {* AdsDDRenameObject options *}
   ADS_KEEP_TABLE_FILE_NAME       = $00000001;

   {* AdsDDCreateArticle options *}
   ADS_IDENTIFY_BY_PRIMARY        = $00000001;
   ADS_IDENTIFY_BY_ALL            = $00000002;

   {* AdsDDCreateSubscription options *}
   ADS_SUBSCR_QUEUE_IS_STATIC     = $00000001;
   ADS_SUBSCR_AIS_TARGET          = $00000002;
   ADS_SUBSCR_IGNORE_FAILED_REP   = $00000004;
   ADS_SUBSCR_LOG_FAILED_REP_DATA = $00000008;


   {*
    * Table names for system tables.
    *}
   ADS_SYSTEM_DICTIONARY_TABLE_NAME         = 'dictionary';
   ADS_SYSTEM_TABLES_TABLE_NAME             = 'tables';
   ADS_SYSTEM_COLUMNS_TABLE_NAME            = 'columns';
   ADS_SYSTEM_USERS_TABLE_NAME              = 'users';
   ADS_SYSTEM_USER_GROUPS_TABLE_NAME        = 'usergroups';
   ADS_SYSTEM_USER_GROUP_MEMBERS_TABLE_NAME = 'usergroupmembers';
   ADS_SYSTEM_INDEX_FILES_TABLE_NAME        = 'indexfiles';
   ADS_SYSTEM_INDEXES_TABLE_NAME            = 'indexes';
   ADS_SYSTEM_PERMISSIONS_TABLE_NAME        = 'permissions';
   ADS_SYSTEM_RELATIONS_TABLE_NAME          = 'relations';
   ADS_SYSTEM_VIEWS_TABLE_NAME              = 'views';
   ADS_SYSTEM_STORED_PROCEDURES_TABLE_NAME  = 'storedprocedures';
   ADS_SYSTEM_LINKS_TABLE_NAME              = 'links';
   ADS_SYSTEM_OBJECTS_TABLE_NAME            = 'objects';
   ADS_SYSTEM_TRIGGERS_TABLE_NAME            = 'triggers';

   {* Number of system tables *}
   ADS_NUMBER_SYSTEM_TABLES = 15;


type
   PAceChar = PAnsiChar;
   AceChar = AnsiChar;

   {$IFDEF ADSDELPHI2008_OR_NEWER}
   PAceBinary = PByte;
   {$ELSE}
   PAceBinary = PChar;
   {$ENDIF}

   { This data type defines what type of function to pass to
     AdsRegisterCallbackFunction(). }
   TCallbackFunction = function( usPercent: Word;
                                 ulCallbackID: Longint ): Longint; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   { This data type defines what type of function to pass to
     AdsRegisterProgressCallback(). }
   TProgressCallback = function( usPercent: Word ): Longint; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   { This data type defines what type of function to pass to
     AdsRegisterSQLAbortFunc(). }
   TSQLAbortFunc = function: Longint; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   { This data type defines the type of function that AdsRegisterUDF() takes
     as a parameter.  This should be used to cast the real function, which has
     different parameters.  See the documentation for AdsRegisterUDF for more
     information }
   TUDFFunc = function: Longint; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   { This type allows a numeric field value to be passed into functions
     that expect field names.  If the user prefers to use column number,
     then calls like this can be made:
     ulRet = AdsGetDouble( hTable, ADSFIELD( 1 ), &dVal );
     Where the first column is a numeric value to retrieve. }
   ADSFIELD = PAceChar;

   { data type definitions }
   ADSHANDLE      = Longint;

   {*
    * With data dicitonaries it is possible for a table to have more than
    * fifty index tags.  If you need more than fifty tags you will
    * need to declare a new array with a larger size.
    *}
   ADSIndexArray  = array[0..ADS_MAX_TAGS - 1] of ADSHANDLE;
   PADSIndexArray = ^ADSIndexArray;

   PADSHANDLE     = ^ADSHANDLE;
   PDOUBLE        = ^Double;
   PWord          = ^Word;
   SIGNED16       = SmallInt;
   PSIGNED16      = ^SmallInt;
   UNSIGNED16     = Word;
   PUNSIGNED16    = ^Word;
   SIGNED32       = Longint;
   PSIGNED32      = ^SIGNED32;
{$IFDEF ADSDELPHI5_OR_NEWER }
   SIGNED64       = Int64;
   PSIGNED64      = ^SIGNED64;
{$ENDIF}
{$IFDEF ADSDELPHI4_OR_NEWER }
   UNSIGNED32     = LongWord;
{$ELSE}
   UNSIGNED32     = Longint;
{$ENDIF}
   PUNSIGNED32    = ^UNSIGNED32;
   SIGNED8        = BYTE;
   UNSIGNED8      = BYTE;
   pPChar         = ^PAceChar;


{ structure definitions for the Management API }
ADS_MGMT_COMM_STATS = record
   dPercentCheckSums:   double;      { % of packets with checksum failures }
   ulTotalPackets:      UNSIGNED32;  { Total packets received }
   ulRcvPktOutOfSeq:    UNSIGNED32;  { Receive packets out of sequence }
   ulNotLoggedIn:       UNSIGNED32;  { Packet owner not logged in }
   ulRcvReqOutOfSeq:    UNSIGNED32;  { Receive requests out of sequence }
   ulCheckSumFailures:  UNSIGNED32;  { Checksum failures }
   ulDisconnectedUsers: UNSIGNED32;  { Server initiated disconnects }
   ulPartialConnects:   UNSIGNED32;  { Removed partial connections }
   ulInvalidPackets:    UNSIGNED32;  { Rcvd invalid packets (NT only) }
   ulRecvFromErrors:    UNSIGNED32;  { RecvFrom failed (NT only) }
   ulSendToErrors:      UNSIGNED32;  { SendTo failed (NT only) }
end;

   pADS_MGMT_COMM_STATS = ^ADS_MGMT_COMM_STATS;


ADS_MGMT_CONFIG_PARAMS = record
   ulNumConnections:        UNSIGNED32;  { number connections }
   ulNumWorkAreas:          UNSIGNED32;  { number work areas }
   ulNumTables:             UNSIGNED32;  { number tables }
   ulNumIndexes:            UNSIGNED32;  { number indexes }
   ulNumLocks:              UNSIGNED32;  { number locks }
   ulUserBufferSize:        UNSIGNED32;  { user buffer }
   ulStatDumpInterval:      UNSIGNED32;  { statistics dump interval }
   ulErrorLogMax:           UNSIGNED32;  { max size of error log }
   ulNumTPSHeaderElems:     UNSIGNED32;  { number TPS header elems }
   ulNumTPSVisibilityElems: UNSIGNED32;  { number TPS vis elems }
   ulNumTPSMemoTransElems:  UNSIGNED32;  { number TPS memo elems }
   usNumRcvECBs:            UNSIGNED16;  { number rcv ECBs (NLM only) }
   usNumSendECBs:           UNSIGNED16;  { number send ECBs (NLM only) }
   usNumBurstPackets:       UNSIGNED16;  { number packets per burst }
   usNumWorkerThreads:      UNSIGNED16;  { number worker threads }
   ulSortBuffSize:          UNSIGNED32;  { index sort buffer size }
   aucErrorLog:             array[0..ADS_MAX_CFG_PATH - 1] of AceChar; { error log path }
   aucSemaphore:            array[0..ADS_MAX_CFG_PATH - 1] of AceChar; { sema4 file path }
   aucTransaction:          array[0..ADS_MAX_CFG_PATH - 1] of AceChar; { TPS log file path }

   ucReserved3:             UNSIGNED8 ;  { reserved }
   ucReserved4:             UNSIGNED8 ;  { reserved }
   usSendIPPort:            UNSIGNED16;  { NT Service IP send port # }
   usReceiveIPPort:         UNSIGNED16;  { NT Service IP receive port # }
   ucUseIPProtocol:         UNSIGNED8;   { Win9x only. Which protocol to use }
   ucFlushEveryUpdate:      UNSIGNED8;   { Win9x specific }

   ulGhostTimeout:          UNSIGNED32;  { Diconnection time for partial connections }
   ulFlushFrequency:        UNSIGNED32;  { local server }

   ulKeepAliveTimeOut:      UNSIGNED32;  { When not using semaophore files. In milli-secs}
   ucDisplayNWLoginNames:   UNSIGNED8;   { Display connections using user names. }
   ucUseSemaphoreFiles:     UNSIGNED8;   { Whether or not to use semaphore files }
   ucUseDynamicAOFs:        UNSIGNED8;
   ucUseInternet:           UNSIGNED8;   { 0 if an Internet port is not specified. }

   usInternetPort:          UNSIGNED16;  { Internet Port }
   usMaxConnFailures:       UNSIGNED16;  { Maximum Internet connection failures allowed. }
   ulInternetKeepAlive:     UNSIGNED32;  { In Milli-secs }

   usCompressionLevel:      UNSIGNED16;  { ADS_COMPRESS_NEVER, ADS_COMPRESS_INTERNET, or ADS_COMPRESS_ALWAYS }
   usReserved5:             UNSIGNED16;  { reserved }
   ulReserved6:             UNSIGNED32;  { reserved }
end;

   pADS_MGMT_CONFIG_PARAMS = ^ADS_MGMT_CONFIG_PARAMS;

ADS_MGMT_CONFIG_MEMORY = record
   ulTotalConfigMem:      UNSIGNED32;    { total mem used by cfg params }
   ulConnectionMem:       UNSIGNED32;    { memory taken by connections }
   ulWorkAreaMem:         UNSIGNED32;    { memory taken by work areas }
   ulTableMem:            UNSIGNED32;    { memory taken by tables }
   ulIndexMem:            UNSIGNED32;    { memory taken by indexes }
   ulLockMem:             UNSIGNED32;    { memory taken by locks }
   ulUserBufferMem:       UNSIGNED32;    { memory taken by user buffer }
   ulTPSHeaderElemMem:    UNSIGNED32;    { memory taken by TPS hdr elems }
   ulTPSVisibilityElemMem:UNSIGNED32;    { memory taken by TPS vis elems }
   ulTPSMemoTransElemMem: UNSIGNED32;    { mem taken by TPS memo elems }
   ulRcvEcbMem:           UNSIGNED32;    { mem taken by rcv ECBs (NLM) }
   ulSendEcbMem:          UNSIGNED32;    { mem taken by send ECBs (NLM) }
   ulWorkerThreadMem:     UNSIGNED32;    { mem taken by worker threads }
end;

   pADS_MGMT_CONFIG_MEMORY = ^ADS_MGMT_CONFIG_MEMORY;


ADS_MGMT_INSTALL_INFO = record
   ulUserOption :       UNSIGNED32;
   aucRegisteredOwner:  array[0..ADS_REG_OWNER_LEN - 1] of AceChar;
   aucVersionStr:       array[0..ADS_REVISION_LEN - 1] of AceChar;
   aucInstallDate:      array[0..ADS_INST_DATE_LEN - 1] of AceChar;
   aucOemCharName:      array[0..ADS_OEM_CHAR_NAME_LEN - 1] of AceChar;
   aucAnsiCharName:     array[0..ADS_ANSI_CHAR_NAME_LEN - 1] of AceChar;
   aucEvalExpireDate:   array[0..ADS_INST_DATE_LEN - 1] of AceChar;
   aucSerialNumber:     array[0..ADS_SERIAL_NUM_LEN - 1] of AceChar;
end;

   pADS_MGMT_INSTALL_INFO = ^ADS_MGMT_INSTALL_INFO;
